<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" > -->

        <CheckBox
            android:id="@+id/wake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wake" />

        <EditText
            android:id="@+id/evil_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/limited_small" />

        <EditText
            android:id="@+id/evil_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/limited_big" />
         <TextView
            android:id="@+id/evil_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp" />
  <!--   </LinearLayout> -->

    <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/evil_choicecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choiceCards" /> 

       
    </LinearLayout> -->

</LinearLayout>